0.81
 * Fixed bug causing Realms to be cached even though they failed to open correctly.
 * Fixed bug when using Realm.copyToRealm() with a primary key could crash if default value was already used in the Realm.

0.80
* Queries on relationships can be case sensitive.
* Fixed bug when importing JSONObjects containing NULL values.
* Fixed crash when trying to remove last element of a RealmList.
* Fixed bug crashing annotation processor when using "name" in model classes for RealmObject references
* Fixed problem occurring when opening an encrypted Realm with two different instances of the same key.
* Version checker no longer reports that updates are available when latest version is used.
* Added support for static fields in RealmObjects.
* Realm.writeEncryptedCopyTo() has been reenabled.

0.79.1
 * copyToRealm() no longer crashes on cyclic data structures.
 * Fixed potential crash when using copyToRealmOrUpdate with an object graph containing a mix of elements with and without primary keys.

0.79
 * Added support for ARM64.
 * Added RealmQuery.not() to negate a query condition.
 * Made the native libraries much smaller. Arm went from 1.8MB to 800KB.
 * Better error reporting when trying to create or open a Realm file fails.
 * Improved error reporting in case of missing accessors in model classes.
 * Re-enabled RealmResults.remove(index) and RealmResults.removeLast().
 * Primary keys are now supported through the @PrimaryKey annotation.
 * Added copyToRealmOrUpdate() and createOrUpdateFromJson() methods, that works for models with primary keys.
 * Fixed error when instantiating a Realm with the wrong key.
 * Throw an exception if deleteRealmFile() is called when there is an open instance of the Realm.
 * Made migrations and compression methods synchronised.
 * Removed methods deprecated in 0.76. Now Realm.allObjectsSorted() and RealmQuery.findAllSorted() need to be used instead.
 * Reimplemented Realm.allObjectSorted() for better performance.

0.78