@@ -1,4 +1,5 @@
 0.81
+ * A RealmMigrationExceptionNeeded is now properly thrown if @Index and @PrimaryKey are not set correctly during a migration.
  * Fixed bug causing Realms to be cached even though they failed to open correctly.
  * Fixed bug when using Realm.copyToRealm() with a primary key could crash if default value was already used in the Realm.
 
